--- a/index.html
+++ b/index.html
@@ -7,7 +7,16 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <!-- Header a tutta larghezza -->
+  <header class="page-header">
+    <h1>Attilio Comes</h1>
+    <h3>Tecnico TLC</h3>
+    <p>San Severo, Puglia, Italia</p>
+  </header>
+
+  <!-- Layout a due colonne -->
   <div class="wrapper">
+    <!-- Fascia verticale (sidebar) -->
     <aside class="sidebar">
       <div class="sidebar-inner">
         <section class="contact">
@@ -15,12 +24,12 @@
           <ul>
             <li>3389878635</li>
             <li><a href="mailto:attilio.comes@gmail.com">attilio.comes@gmail.com</a></li>
-            <li><a href="https://www.linkedin.com/in/attilio-comes-b0248159/">LinkedIn Attilio Comes</a></li>
-            <li><a href="https://github.com/ComesLab">github.com/ComesLab</a></li>
+            <li><a href="https://www.linkedin.com/in/attilio-comes-b0248159/">LinkedIn</a></li>
+            <li><a href="https://github.com/ComesLab">GitHub</a></li>
           </ul>
         </section>
         <section class="skills">
-          <h2>Competenze principali</h2>
+          <h2>Competenze</h2>
           <ul>
             <li>Data recovery</li>
             <li>Sviluppo in Python</li>
@@ -41,12 +50,9 @@
         </section>
       </div>
     </aside>
+
+    <!-- Contenuto principale a destra -->
     <main class="main-content">
-      <header class="main-header">
-        <h1>Attilio Comes</h1>
-        <h3>Tecnico TLC</h3>
-        <p>San Severo, Puglia, Italia</p>
-      </header>
       <section class="experience">
         <h2>Esperienza</h2>
         <div class="experience-item">
@@ -87,4 +93,9 @@
       </section>
       <section class="summary">
         <h2>Riepilogo</h2>
-        <p>Con una passione per le telecomunicazioni e sempre desideroso di crescere, ho matu
+        <p>Con una passione per le telecomunicazioni e sempre desideroso di crescere, ho maturato esperienza in interventi software e hardware per dispositivi mobili. La mia conoscenza dei protocolli TCP/IP e dell'architettura di rete mi consente di affrontare con competenza le sfide nel vasto campo dell'IT.</p>
+      </section>
+    </main>
+  </div>
+</body>
+</html>
