--- a/index.html
+++ b/index.html
@@ -13,8 +13,17 @@
     <h3>Tecnico TLC</h3>
     <p>San Severo, Puglia, Italia</p>
   </header>
-
-  <!-- Layout a due colonne -->
+  
+  <!-- Riepilogo sotto l'intestazione -->
+  <section class="summary">
+    <h2>Riepilogo</h2>
+    <p>
+      Con una passione per le telecomunicazioni e sempre desideroso di crescere, ho maturato esperienza in interventi software e hardware per dispositivi mobili.
+      La mia conoscenza dei protocolli TCP/IP e dell'architettura di rete mi consente di affrontare con competenza le sfide nel vasto campo dell'IT.
+    </p>
+  </section>
+  
+  <!-- Layout a due colonne: Sidebar e Contenuto principale -->
   <div class="wrapper">
     <!-- Fascia verticale (sidebar) -->
     <aside class="sidebar">
@@ -51,7 +60,7 @@
       </div>
     </aside>
 
-    <!-- Contenuto principale a destra -->
+    <!-- Contenuto principale: Esperienze ed Educazione -->
     <main class="main-content">
       <section class="experience">
         <h2>Esperienza</h2>
@@ -88,12 +97,10 @@
       </section>
       <section class="education">
         <h2>Formazione</h2>
-        <p><strong>I.T.I.S A. Minuziano San Severo (FG)</strong><br>
-        Perito Elettrotecnico Industriale, Elettrotecnica (1983 – 1988)</p>
-      </section>
-      <section class="summary">
-        <h2>Riepilogo</h2>
-        <p>Con una passione per le telecomunicazioni e sempre desideroso di crescere, ho maturato esperienza in interventi software e hardware per dispositivi mobili. La mia conoscenza dei protocolli TCP/IP e dell'architettura di rete mi consente di affrontare con competenza le sfide nel vasto campo dell'IT.</p>
+        <p>
+          <strong>I.T.I.S A. Minuziano San Severo (FG)</strong><br>
+          Perito Elettrotecnico Industriale, Elettrotecnica (1983 – 1988)
+        </p>
       </section>
     </main>
   </div>
