--- a/index.html
+++ b/index.html
@@ -14,15 +14,6 @@
     <p>San Severo, Puglia, Italia</p>
   </header>
   
-  <!-- Riepilogo sotto l'intestazione -->
-  <section class="summary">
-    <h2>Riepilogo</h2>
-    <p>
-      Con una passione per le telecomunicazioni e sempre desideroso di crescere, ho maturato esperienza in interventi software e hardware per dispositivi mobili.
-      La mia conoscenza dei protocolli TCP/IP e dell'architettura di rete mi consente di affrontare con competenza le sfide nel vasto campo dell'IT.
-    </p>
-  </section>
-  
   <!-- Layout a due colonne: Sidebar e Contenuto principale -->
   <div class="wrapper">
     <!-- Fascia verticale (sidebar) -->
@@ -59,50 +50,12 @@
         </section>
       </div>
     </aside>
-
-    <!-- Contenuto principale: Esperienze ed Educazione -->
+    
+    <!-- Contenuto principale a destra -->
     <main class="main-content">
-      <section class="experience">
-        <h2>Esperienza</h2>
-        <div class="experience-item">
-          <h3>Sviluppatore Python</h3>
-          <p class="date">Nuove Frontiere Lavoro - 11/2024</p>
-          <p>Realizzato utility in Python per la scansione delle porte di indirizzi IP, migliorando la sicurezza ed efficienza delle reti aziendali.</p>
-        </div>
-        <div class="experience-item">
-          <h3>Sistemista di Rete</h3>
-          <p class="date">Nuove Frontiere Lavoro (per agenzia interinale) - 22/07/2024 al 26/07/2024</p>
-          <p>Sviluppo rete aziendale con simulatore Cisco Packet Tracer per la Società Sportiva Dilettantistica Cavaliere Country Club S.r.L. (NA).</p>
-        </div>
-        <div class="experience-item">
-          <h3>Tecnico Hardware & Software</h3>
-          <p class="date">h.u.b. STitaly, Foggia e provincia</p>
-          <p>Gestione e consulenza tecnica dei dispositivi cellulari (Xiaomi, Alcatel, Lenovo).</p>
-        </div>
-        <div class="experience-item">
-          <h3>Tecnico Hardware & Software</h3>
-          <p class="date">NEW MAJESTIC SPA - Maggio 2019</p>
-          <p>Gestione e consulenza dei dispositivi cellulari per Majestic a Foggia e provincia.</p>
-        </div>
-        <div class="experience-item">
-          <h3>Tecnico TLC</h3>
-          <p class="date">Progetto Elettronica 92 s.r.l. - 1995-2006 (Presente 11 anni)</p>
-          <p>Gestione dispositivi cellulari Siemens mobile.</p>
-        </div>
-        <div class="experience-item">
-          <h3>Tecnico di Laboratorio</h3>
-          <p class="date">5°O.R.E Esercito Italiano - Maggio 1990 / Giugno 1991, Treviso</p>
-          <p>Gestione e riparazione dei dispositivi di radiocomunicazione per l’esercito Italiano (regione NordEst).</p>
-        </div>
-      </section>
-      <section class="education">
-        <h2>Formazione</h2>
+      <!-- Riepilogo che inizia alla fine della sidebar -->
+      <section class="summary">
+        <h2>Riepilogo</h2>
         <p>
-          <strong>I.T.I.S A. Minuziano San Severo (FG)</strong><br>
-          Perito Elettrotecnico Industriale, Elettrotecnica (1983 – 1988)
-        </p>
-      </section>
-    </main>
-  </div>
-</body>
-</html>
+          Con una passione per le telecomunicazioni e sempre desideroso di crescere, ho maturato esperienza in interventi software e hardware per dispositivi mobili.
+          La mia conoscenza dei protocolli TCP/IP e dell'architettura di rete m
