--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <!-- Header con dati anagrafici in alto, sfondo nero -->
+  <!-- Header in cima, sfondo nero -->
   <header class="page-header">
     <div class="header-content">
       <h1>Attilio Comes</h1>
@@ -16,9 +16,9 @@
     </div>
   </header>
 
-  <!-- Layout a due colonne: Sidebar e contenuto principale -->
+  <!-- Layout a due colonne: il sidebar inizia subito sotto l'header -->
   <div class="wrapper">
-    <!-- Sidebar (colonna sinistra, interamente nera) -->
+    <!-- Sidebar a sinistra -->
     <aside class="sidebar">
       <div class="sidebar-inner">
         <section class="contact">
@@ -52,8 +52,8 @@
         </section>
       </div>
     </aside>
-
-    <!-- Contenuto principale (esperienze e formazione) che inizia in alto -->
+    
+    <!-- Contenuto principale a destra -->
     <main class="main-content">
       <section class="experience">
         <h2>Esperienza</h2>
@@ -62,7 +62,31 @@
           <p class="date">Nuove Frontiere Lavoro - 11/2024</p>
           <p>Realizzato utility in Python per la scansione delle porte di indirizzi IP, migliorando la sicurezza ed efficienza delle reti aziendali.</p>
         </div>
-        <!-- Altri elementi di esperienza... -->
+        <div class="experience-item">
+          <h3>Sistemista di Rete</h3>
+          <p class="date">Nuove Frontiere Lavoro (per agenzia interinale) - 22/07/2024 al 26/07/2024</p>
+          <p>Sviluppo rete aziendale con simulatore Cisco Packet Tracer per la Società Sportiva Dilettantistica Cavaliere Country Club S.r.L. (NA).</p>
+        </div>
+        <div class="experience-item">
+          <h3>Tecnico Hardware & Software</h3>
+          <p class="date">h.u.b. STitaly, Foggia e provincia</p>
+          <p>Gestione e consulenza tecnica dei dispositivi cellulari (Xiaomi, Alcatel, Lenovo).</p>
+        </div>
+        <div class="experience-item">
+          <h3>Tecnico Hardware & Software</h3>
+          <p class="date">NEW MAJESTIC SPA - Maggio 2019</p>
+          <p>Gestione e consulenza dei dispositivi cellulari per Majestic a Foggia e provincia.</p>
+        </div>
+        <div class="experience-item">
+          <h3>Tecnico TLC</h3>
+          <p class="date">Progetto Elettronica 92 s.r.l. - 1995-2006 (Presente 11 anni)</p>
+          <p>Gestione dispositivi cellulari Siemens mobile.</p>
+        </div>
+        <div class="experience-item">
+          <h3>Tecnico di Laboratorio</h3>
+          <p class="date">5°O.R.E Esercito Italiano - Maggio 1990 / Giugno 1991, Treviso</p>
+          <p>Gestione e riparazione dei dispositivi di radiocomunicazione per l’esercito Italiano (regione NordEst).</p>
+        </div>
       </section>
       <section class="education">
         <h2>Formazione</h2>
