--- a/index.html
+++ b/index.html
@@ -16,7 +16,15 @@
     </div>
   </header>
 
-  <!-- Layout a due colonne: il sidebar inizia subito sotto l'header -->
+  <!-- Campo descrizione posto subito sotto l'header -->
+  <section class="description">
+    <p>
+      Con una passione per le telecomunicazioni e sempre desideroso di crescere, ho maturato esperienza in interventi software e hardware per dispositivi mobili.
+      La mia conoscenza dei protocolli TCP/IP e dell'architettura di rete mi consente di affrontare con competenza le sfide nel vasto campo dell'IT.
+    </p>
+  </section>
+
+  <!-- Layout a due colonne: il sidebar (contatti, competenze e certificazioni) inizia sotto l'header e la descrizione -->
   <div class="wrapper">
     <!-- Sidebar a sinistra -->
     <aside class="sidebar">
@@ -52,7 +60,7 @@
         </section>
       </div>
     </aside>
-    
+
     <!-- Contenuto principale a destra -->
     <main class="main-content">
       <section class="experience">
