--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <section class="contact">
           <h2>Contatti</h2>
           <ul>
-            <a href="tel:+393389878635" target="_blank" rel="noopener" title="Chiama">
+            <a href="tel:+39338" target="_blank" rel="noopener" title="Chiama">
               <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" 
                    viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" 
                    stroke-linecap="round" stroke-linejoin="round">
@@ -39,7 +39,7 @@
                          a2 2 0 0 1 2.11-.45 12.05 12.05 0 0 0 2.81.67 
                          A2 2 0 0 1 22 16.92z"></path>
               </svg>
-              <span>+39 338</span>
+              <span>+393389878635</span>
             </a>
             
             
