--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                          a2 2 0 0 1 2.11-.45 12.05 12.05 0 0 0 2.81.67 
                          A2 2 0 0 1 22 16.92z"></path>
               </svg>
-              <span>+393389878635</span>
+              <span>+393389</span>
             </a>
             
             
