--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
   <!-- Footer: aggiunto in fondo con le note -->
   <footer class="footer">
     <h3>Sviluppato da Attilio Comes</h3>
-    <p>Trovo soluzioni utilizzando hardware e un pizzico di code.</p>
+    <p>Trovo soluzioni utilizzando hardware e un pizzico di code</p>
   </footer>
 
 </body>
