--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         <div class="experience-item">
           <h3>Tecnico Hardware & Software</h3>
           <p class="date">NEW MAJESTIC SPA - Maggio 2019</p>
-          <p>Gestione e consulenza dei dispositivi cellulari per Majestic a Foggia e provincia.</p>
+          <p>Gestione e consulenza dei dispositivi cellulari Majestic per Foggia e provincia.</p>
         </div>
         <div class="experience-item">
           <h3>Tecnico TLC</h3>
