--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <h2>Esperienza</h2>
         <div class="experience-item">
           <h3>Sviluppatore Python</h3>
-          <p class="date">Nuove Frontiere Lavoro - 11/2024</p>
+          <p class="date">Nuove Frontiere Lavoro (agenzia interinale)- 11/2024</p>
           <p>Realizzato utility in Python per la scansione delle porte di indirizzi IP, migliorando la sicurezza ed efficienza delle reti aziendali.</p>
         </div>
         <div class="experience-item">
