--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           <h2>Certificazioni</h2>
           <ul>
             <li>Sistemista di Rete - Forma.Temp (ID 104PROTD2406677)</li>
-            <li>Cyber Security & Python - Forma.Temp (ID 104PROTD2423977, 160h)</li>
+            <li>Cyber Security con l'ausilio di Python - Forma.Temp (ID 104PROTD2423977, 160h)</li>
             <li>Microsoft Active Directory - Windows Server 2019</li>
             <li>MICROSOFT MCDBA (04/2021, Cert. 000000063976)</li>
           </ul>
