--- a/index.html
+++ b/index.html
@@ -145,6 +145,15 @@
   <footer class="footer">
     <h3>Sviluppato da Attilio Comes</h3>
     <p>Trovo soluzioni utilizzando hardware e un pizzico di code.</p>
+
+    <!-- link di navigazione secondaria -->
+        <nav>
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#servizi">Servizi</a></li>
+                <li><a href="#contatti">Contatti</a></li>
+            </ul>
+        </nav>
   </footer>
 
 </body>
