--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@
         <nav>
             <ul>
                 <li><a href="#home">Home</a></li>
-                <li><a href="#servizi">Servizi</a></li>
-                <li><a href="#contatti">Contatti</a></li>
+                <li><a href="#https://comeslab.company.site/">Servizi</a></li>
+                <li><a href="#about">Contatti</a></li>
             </ul>
         </nav>
   </footer>
