--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
             <ul>
                 <li><a href="#home">Home</a></li>
                 <li><a href="#https://comeslab.company.site/">Servizi</a></li>
-                <li><a href="#about">Contatti</a></li>
+                <li><a href="#about">about</a></li>
             </ul>
         </nav>
   </footer>
