--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         <nav>
             <ul>
                 <li><a href="#home">Home</a></li>
-                <li><a href="#https://comeslab.company.site/">Servizi</a></li>
+                <li><a href="https://comeslab.company.site/">Servizi</a></li>
                 <li><a href="#about">about</a></li>
             </ul>
         </nav>
