--- a/index.html
+++ b/index.html
@@ -92,8 +92,7 @@
     <main class="main-content">
       <section class="summary">
         <p>
-          Con una passione per le telecomunicazioni e sempre desideroso di crescere, ho maturato esperienza in interventi software e hardware per dispositivi mobili.
-          La mia conoscenza dei protocolli TCP/IP e dell'architettura di rete mi consente di affrontare con competenza le sfide nel vasto campo dell'IT.
+          La mia passione per le tecnologie della comunicazione, unita al costante desiderio di apprendere e crescere professionalmente, mi ha permesso di accumulare una solida esperienza sia nel settore software che hardware applicato ai dispositivi mobili. Grazie anche a una approfondita conoscenza dell'architettura di rete TCP/IP, sono in grado di affrontare con competenza le sfide nel campo delle telecomunicazioni.
         </p>
       </section>
 
