--- a/index.html
+++ b/index.html
@@ -148,10 +148,10 @@
     <!-- link di navigazione secondaria -->
         <nav>
             <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="https://comeslab.company.site/">Servizi</a></li>
-                <li><a href="#about">about</a></li>
-                <li><a href="intent://com.android.settings/#Intent;scheme=android-app;end">SetUp_Android</a></li>
+                <li><a href="https://github.com/ComesLab">MY_GitHub</a></li>
+                <li><a href="https://www.linkedin.com/in/attilio-comes-b0248159/">Servizi</a></li>
+                <li><a href="https://comeslab.company.site/">about</a></li>
+                <li><a href="intent://com.android.settings/#Intent;scheme=android-app;end">FRP_SetUp_Android</a></li>
                 
             </ul>
         </nav>
