--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="Profile" content="Curriculum Vitae attilio comes">
+    <meta name="Attilio Comes" content="attilio, Comes, Curriculum">
+    <meta name="attilio Comes" content="comeslab">
   <title>Curriculum Attilio Comes</title>
   <link rel="stylesheet" href="style.css">
 </head>
@@ -11,7 +14,7 @@
   <header class="page-header">
     <div class="header-content">
       <h1>Attilio Comes</h1>
-      <h3>Tecnico TLC</h3>
+      <h3>Tecnico Hardware & software</h3>
       <p>San Severo, Puglia, Italia</p>
     </div>
   </header>
@@ -69,11 +72,12 @@
           <h2>Competenze</h2>
           <ul>
             <li>Data recovery</li>
-            <li>Sviluppo in Python</li>
+            <li>Sviluppo utility in Python</li>
             <li>Interventi hardware (SMD/PTH)</li>
             <li>Architettura di rete TCP/IP</li>
             <li>Conoscenza Office 365</li>
             <li>Conoscenza Linux Essentials</li>
+            <li>Sviluppo Front-end HTML/CSS</li>
           </ul>
         </section>
         <section class="certifications">
@@ -92,7 +96,7 @@
     <main class="main-content">
       <section class="summary">
         <p>
-          La mia passione per le tecnologie della comunicazione, unita al costante desiderio di apprendere e crescere professionalmente, mi ha permesso di accumulare una solida esperienza sia nel settore software che hardware applicato ai dispositivi mobili. Grazie anche a una approfondita conoscenza dell'architettura di rete TCP/IP, sono in grado di affrontare con competenza le sfide nel campo delle telecomunicazioni.
+          La mia passione per le tecnologie della comunicazione, unita al costante desiderio di apprendere e crescere professionalmente, mi ha permesso di accumulare una solida esperienza sia nel settore software che hardware applicato ai dispositivi mobili. Grazie anche a una approfondita conoscenza dell'architettura di rete TCP/IP, sono in grado di affrontare con competenza le sfide nel campo del IT.
         </p>
       </section>
 
@@ -111,17 +115,17 @@
         <div class="experience-item">
           <h3>Tecnico Hardware & Software</h3>
           <p class="date">h.u.b. STitaly, Foggia e provincia</p>
-          <p>Gestione e consulenza tecnica dei dispositivi cellulari (Xiaomi, Alcatel, Lenovo).</p>
+          <p>Gestione e consulenza tecnica autorizzata dei dispositivi cellulari (Xiaomi, Alcatel, Lenovo).</p>
         </div>
         <div class="experience-item">
           <h3>Tecnico Hardware & Software</h3>
           <p class="date">NEW MAJESTIC SPA - Maggio 2019</p>
-          <p>Gestione e consulenza dei dispositivi cellulari Majestic per Foggia e provincia.</p>
+          <p>Gestione e consulenza autorizzata dei dispositivi cellulari Majestic per Foggia e provincia.</p>
         </div>
         <div class="experience-item">
           <h3>Tecnico TLC</h3>
           <p class="date">Progetto Elettronica 92 s.r.l. - 1995-2006 (Presente 11 anni)</p>
-          <p>Gestione dispositivi cellulari Siemens mobile.</p>
+          <p>Gestione autorizzata dei dispositivi cellulari Siemens mobile.</p>
         </div>
         <div class="experience-item">
           <h3>Tecnico di Laboratorio</h3>
