--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html lang="it">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="Profile" content="Curriculum Vitae attilio comes">
     <meta name="Attilio Comes" content="attilio, Comes, Curriculum">
     <meta name="attilio Comes" content="comeslab">
   <title>Curriculum Attilio Comes</title>
+  <meta name="robots" content="max-image-preview:large">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
